--- a/src-client/style/portfolio.scss
+++ b/src-client/style/portfolio.scss
@@ -5,6 +5,7 @@
         padding: 32px;
         box-sizing: border-box;
         overflow-y: auto;
+        overflow-x: hidden;
 
         .project {
             img {
